--- a/form-auth/pom.xml
+++ b/form-auth/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>chexagon-form-auth</artifactId>
+    <artifactId>form-auth</artifactId>
     <packaging>war</packaging>
     <properties>
         <tomcat.version>8.0.44</tomcat.version>
@@ -39,11 +39,11 @@
             <dependency>
                 <groupId>com.crimsonhexagon</groupId>
                 <artifactId>redis-session-manager</artifactId>
+                <!--<version>2.1.1</version>-->
                 <version>2.1.2-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 
     <build>
         <pluginManagement>
@@ -149,7 +149,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>
-                                ${project.build.directory}/chexagon-plugin/lib
+                                ${project.build.directory}/ha-plugin/lib
                             </outputDirectory>
                             <excludeGroupIds>org.apache.tomcat,javax.servlet</excludeGroupIds>
                         </configuration>
@@ -166,7 +166,7 @@
                             <target>
                                 <copy todir="${project.build.directory}/cargo/installs/tomcat-${tomcat.version}/apache-tomcat-${tomcat.version}/lib"
                                       overwrite="true">
-                                    <fileset dir="${project.build.directory}/chexagon-plugin/lib"/>
+                                    <fileset dir="${project.build.directory}/ha-plugin/lib"/>
                                 </copy>
                             </target>
                         </configuration>
