--- a/form-auth/src/main/docker/docker-compose.yml
+++ b/form-auth/src/main/docker/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   app:
-    image: gonzalad/chexagon-form-auth:1.0-SNAPSHOT
+    image: gonzalad/form-auth:1.0-SNAPSHOT
     networks:
       - net1
     ports:
