--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>tomcat-ha-samples</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>chexagonformauth</module>
+        <module>form-auth</module>
     </modules>
     <packaging>pom</packaging>
 
