--- a/form-auth/pom.xml
+++ b/form-auth/pom.xml
@@ -22,8 +22,13 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.crimsonhexagon</groupId>
-            <artifactId>redis-session-manager</artifactId>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-tomcat-8</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -37,10 +42,15 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.crimsonhexagon</groupId>
-                <artifactId>redis-session-manager</artifactId>
-                <!--<version>2.1.1</version>-->
-                <version>2.1.2-SNAPSHOT</version>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-tomcat-8</artifactId>
+                <version>3.5.0</version>
+            </dependency>
+            <!-- for codec: org.redisson.codec.FstCodec -->
+            <dependency>
+                <groupId>de.ruedigermoeller</groupId>
+                <artifactId>fst</artifactId>
+                <version>2.52</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
