--- a/form-auth/pom.xml
+++ b/form-auth/pom.xml
@@ -14,6 +14,20 @@
         <tomcat.version>8.0.44</tomcat.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Repository</name>
+            <url>https://repo.spring.io/release/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -22,8 +36,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.crimsonhexagon</groupId>
-            <artifactId>redis-session-manager</artifactId>
+            <groupId>com.gopivotal.manager</groupId>
+            <artifactId>redis-store</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -37,10 +51,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.crimsonhexagon</groupId>
-                <artifactId>redis-session-manager</artifactId>
-                <!--<version>2.1.1</version>-->
-                <version>2.1.2-SNAPSHOT</version>
+                <groupId>com.gopivotal.manager</groupId>
+                <artifactId>redis-store</artifactId>
+                <version>1.3.5.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
